; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_cache_mipsNN.c_mipsNN_sdcache_wbinv_range_index_64.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_cache_mipsNN.c_mipsNN_sdcache_wbinv_range_index_64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sdcache_size = common dso_local global i32 0, align 4
@CACHE_R4K_SD = common dso_local global i32 0, align 4
@CACHEOP_R4K_INDEX_WB_INV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mipsNN_sdcache_wbinv_range_index_64(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @sdcache_size, align 4
  %8 = sub nsw i32 %7, 1
  %9 = and i32 %6, %8
  %10 = call i32 @MIPS_PHYS_TO_KSEG0(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %11, %12
  %14 = call i32 @round_line64(i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @trunc_line64(i32 %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %22, %2
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %3, align 4
  %20 = sub nsw i32 %18, %19
  %21 = icmp sge i32 %20, 2048
  br i1 %21, label %22, label %30

22:                                               ; preds = %17
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @CACHE_R4K_SD, align 4
  %25 = load i32, i32* @CACHEOP_R4K_INDEX_WB_INV, align 4
  %26 = or i32 %24, %25
  %27 = call i32 @cache_r4k_op_32lines_64(i32 %23, i32 %26)
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, 2048
  store i32 %29, i32* %3, align 4
  br label %17

30:                                               ; preds = %17
  br label %31

31:                                               ; preds = %35, %30
  %32 = load i32, i32* %3, align 4
  %33 = load i32, i32* %5, align 4
  %34 = icmp slt i32 %32, %33
  br i1 %34, label %35, label %43

35:                                               ; preds = %31
  %36 = load i32, i32* %3, align 4
  %37 = load i32, i32* @CACHE_R4K_SD, align 4
  %38 = load i32, i32* @CACHEOP_R4K_INDEX_WB_INV, align 4
  %39 = or i32 %37, %38
  %40 = call i32 @cache_op_r4k_line(i32 %36, i32 %39)
  %41 = load i32, i32* %3, align 4
  %42 = add nsw i32 %41, 64
  store i32 %42, i32* %3, align 4
  br label %31

43:                                               ; preds = %31
  ret void
}

declare dso_local i32 @MIPS_PHYS_TO_KSEG0(i32) #1

declare dso_local i32 @round_line64(i32) #1

declare dso_local i32 @trunc_line64(i32) #1

declare dso_local i32 @cache_r4k_op_32lines_64(i32, i32) #1

declare dso_local i32 @cache_op_r4k_line(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
